# ReadSHT31

./: .gitignore  Application.cpp  Application.hpp  CMakeLists.txt  I2CBus.cpp  I2CBus.hpp  README.md  SHT31.cpp  SHT31.hpp  StatusTools.hpp  main.cpp
