cmake_minimum_required (VERSION 3.7)
if(NOT CMAKE_BUILD_TYPE)
    set(CMAKE_BUILD_TYPE Release)
endif()
set(CMAKE_CXX_FLAGS_RELEASE "-O3")
project (read_sht31)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=gnu++17")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
add_executable(read_sht31 I2CBus.cpp I2CBus.hpp StatusTools.hpp main.cpp SHT31.hpp SHT31.cpp Application.cpp Application.hpp)
install(TARGETS read_sht31 DESTINATION /usr/local/bin)
